cru podcast ru melihat chart sisa handle delete eps

--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = /Library/Frameworks/Python.framework/Versions/3.10/bin
+home = C:\Python312
 include-system-site-packages = false
-version = 3.10.7
+version = 3.12.3
+executable = C:\Python312\python.exe
+command = C:\Python312\python.exe -m venv D:\DATAKU\Marmut\env
